--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   background-color: rgba(242, 244, 247, 255);
 }
 
-header, main, footer {
+header, main, section {
   width: 80%;
   margin: auto;
   display: flex;
@@ -57,8 +57,79 @@ form {
 
 }
 
-input[type=text], input[type=password] {
-  padding: 15px;
-  
+input[type=text], .login-btn {
+  padding: 15px 15px 20px 15px;
+  margin: 10px 0;
+  border-radius: 5px;
+  border: 1px solid #ccc
+}
+
+input[type=password] {
+  padding: 15px 15px 20px 15px;
+  border-radius: 5px;
+  border: 1px solid #ccc
+}
+
+input::placeholder {
+  font-size: 15px;
+  font-weight: 400;
+}
+
+.login-btn {
+  padding: 10px;
+  margin-top: 20px;
+  color: white;
+  font-size: 20px;
+  font-weight: 600;
+  background-color: rgb(16,100,252);
+}
+
+.create-account-btn {
+  margin-top: 20px;
+  background-color: rgba(66,183,42,255);
+  border: 1px solid #ccc;
+  color: white;
+  font-size: 16px;
+  font-weight: 600;
+  width: 50%;
+  margin: 25px auto;
+  padding-bottom: 15px;
+  border-radius: 5px;
+  padding: 15px 5px;
+  text-align: center
+}
+
+.forgot-password {
+  font-size: 14px;
+  margin-bottom: 20px;
+  margin-top: 10px;
+  text-align: center;
+  color: rgb(16,100,252);
+}
+
+hr {
+  border: none;
+  height: 1px;
+  background-color: #ccc;
+}
+
+section {
+  margin: 20px auto 40px auto;
+  font-size: 14px;
+}
+
+footer {
+  background-color: white;
+}
+
+footer ul{
+  display: flex;
+  justify-content: space-around;
+}
+
+ul li {
+  font-size: 10px;
+  height: 50px;
+  margin-top: 50px;
 }
 
