mobile version finished

--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
   padding: 0;
   box-sizing: border-box;
   list-style: none;
+  
   font-family: "Montserrat", sans-serif;
-
 }
 
 body {
@@ -13,6 +13,8 @@ body {
 
 header, main, section {
   width: 80%;
+  min-width: 400px;
+  max-width: 400px;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -26,6 +28,7 @@ header p {
   margin-bottom: 20px;
   font-size: 22px;
   font-weight: 500;
+  text-align: center;
 }
 
 
@@ -82,6 +85,8 @@ input::placeholder {
   font-size: 20px;
   font-weight: 600;
   background-color: rgb(16,100,252);
+  cursor: pointer; /* THIS is what gives it the clickable feel */
+  transition: background-color 0.3s;
 }
 
 .create-account-btn {
@@ -96,7 +101,9 @@ input::placeholder {
   padding-bottom: 15px;
   border-radius: 5px;
   padding: 15px 5px;
-  text-align: center
+  text-align: center;
+  cursor: pointer; /* THIS is what gives it the clickable feel */
+  transition: background-color 0.3s;
 }
 
 .forgot-password {
@@ -105,6 +112,15 @@ input::placeholder {
   margin-top: 10px;
   text-align: center;
   color: rgb(16,100,252);
+}
+
+.forgot-password-link {
+  color: rgb(16,100,252);
+  text-decoration: none;
+}
+
+.forgot-password-link:hover {
+  text-decoration: underline;
 }
 
 hr {
@@ -118,6 +134,10 @@ section {
   font-size: 14px;
 }
 
+section:nth-child(1) {
+  display: none;
+}
+
 footer {
   background-color: white;
 }
@@ -125,11 +145,40 @@ footer {
 footer ul{
   display: flex;
   justify-content: space-around;
+  text-decoration: none;
 }
 
 ul li {
   font-size: 10px;
   height: 50px;
   margin-top: 50px;
+  
 }
 
+ul li a {
+  text-decoration: none;
+  color: rgba(132,115,154,255);
+}
+
+ul li a:hover{
+  text-decoration: underline;
+}
+
+@media (min-width: 900px) {
+  .flex-media-900px {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    flex-direction: row;
+  }
+
+  main {
+    margin-top: 150px;
+  }
+
+
+  section:nth-child(2) {
+    display: none;
+  }
+}
